<resources>

    <string name="app_name">AlbergueCDIZong</string>
    <!--Username-->
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btnlogin">Login</string>
    <string name="dont_have_account">¿No Tienes Cuenta?</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Unete</string>
    <string name="title_activity_ejemplo">Ejemplo</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Roberto Juarez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">10 dias</string>
    <string name="likenumbercard_card">10 me encanta</string>
    <string name="tab_search">buscar</string>
    <string name="tab_home">home</string>
    <string name="tab_profile">yo</string>
</resources>
