<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="1">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.6">

           <ImageView
               android:id="@+id/logo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:background="@drawable/platzigram"/>

       </RelativeLayout>
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.4"
           android:fillViewport="true">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="@dimen/padding_horizontal">

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:theme="@style/EditTextWhite">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/username"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/nombre_de_usuario" />


               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   android:theme="@style/EditTextWhite"
                   app:passwordToggleEnabled="true">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/hint_password"
                       android:inputType="textPassword" />


               </android.support.design.widget.TextInputLayout>
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <Button
                       android:id="@+id/btnLogin"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/btnlogin"
                       android:onClick="gopictures"
                       />

               </android.support.design.widget.TextInputLayout>
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center">

                   <TextView
                       android:id="@+id/dontHaveAccount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"

                       android:text="@string/dont_have_account"
                       android:textColor="@android:color/white"
                       android:textSize="@dimen/textsize_donthaveaccount"
                       android:textStyle="bold" />
               <TextView
                   android:id="@+id/createHere"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/dontHaveAccount"
                   android:onClick="goCreateAccount"
                   android:text="@string/create_here"
                   android:textColor="@android:color/white"
                   android:textSize="@dimen/textsize_donthaveaccount"
                   android:textStyle="bold" />

               </RelativeLayout>

           </LinearLayout>
       </ScrollView>




   </LinearLayout>
</android.support.constraint.ConstraintLayout>